[tool.poetry]
name = "nshmdb"
version = "0.1.0"
description = "Fault database for the GNS National Seismic Hazard Model."
authors = ["QuakeCoRE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qcore = { git = "https://github.com/ucgmsim/qcore" }
numpy = "^1.26.4"
geojson = "^3.1.0"
pandas = "^2.2.2"
typer = "^0.12.3"
pyproj = "^3.6.1"
tqdm = "^4.66.4"
pygmt-helper = {git = "https://github.com/ucgmsim/pygmt_helper.git"}
pygmt = "^0.12.0"
geopandas = "^0.14.4"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "*"
python-lsp-black = "*"
python-lsp-isort = "*"
black = "*"
rope = "*"
pyflakes = "*"
mccabe = "*"
pycodestyle = "*"
doq = "*"
mypy = "^1.10.0"
pylsp-mypy = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[scripts]
nshm-db-generator = "nshmdb.scripts.nshm_db_generator:app"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
exclude = ["tests/*"]
