[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nshmdb"
authors = [{name="ucgmsim"}]
description = "A library for working with 2022 NSHM fault geometry"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "duckdb>=1.5.3",
    "geojson>=3.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pygmt-helper>=2026.2.1",
    "qcore-utils>=2025.12.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "shapely>=2.1.2",
    "source-modelling>=2026.6.2",
    "typer>=0.26.7",
]

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "coverage[toml]",
]
types = [
  "types-shapely",
  "pandas-stubs",
  "ty",
]
dev = ["ruff", "deptry", "ty", "numpydoc"]


[tool.setuptools_scm]

[project.scripts]
nshmdb = "nshmdb.scripts.nshm_db_generator:app"

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001"
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "source_modelling",
    "workflow",
    "pygmt_helper",
    "qcore",
    "empirical",
    "nshmdb",
    "IM",
    "mera"
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]


[tool.coverage.run]
omit = [
     "nshmdb/api.py",
     "nshmdb/scripts/nshm_db_generator.py"
]
